Bug 763358. Avoid early gtk initialization on webapprt that can happen when invoked from the command line. r=karlt